# cuda-practice

./: CMakeLists.txt  README.md  gitignore
inferer/include/base/: alloc.h  base.h  buffer.h  cuda_config.h
inferer/include/op/: add.h  embedding.h  layer.h  matul.h  rmsnorm.h  rope.h
inferer/include/tensor/: tensor.h
inferer/source/: tensor.cpp
inferer/source/base/: alloc.cpp  alloc_cpu.cpp  alloc_cu.cpp  alloccpu.cpp  base.cpp  buffer.cpp
inferer/source/op/: add.cpp  embedding.cpp  layer.cpp  matul.cpp  rmsnorm.cpp  rope.cpp
inferer/source/op/kernel/: kernel_inter.cpp  kernel_inter.h
inferer/source/op/kernel/cpu/: add_kernel.cpp  add_kernel.h  embedding.cpp  embedding.h  matul.cpp  matul.h  rmsnorm.cpp  rmsnorm.h  rope.cpp  rope.h  scaler.cpp  scaler.h  scaler_sum.cpp  scaler_sum.h  softmax.cpp  softmax.h  swiglu.cpp  swiglu.h
inferer/source/op/kernel/cuda/: add_kernel_cu.cu  add_kernel_cu.cuh  embedding_cu.cu  embedding_cu.cuh  matul.cu  matul.cuh  mutil_head_cu.cu  mutil_head_cu.cuh  rmsnorm_cu.cu  rmsnorm_cu.cuh  rope_cu.cu  rope_cu.cuh  scaler.cu  scaler.cuh  softmax_cu.cu  softmax_cu.cuh  swiglu_cu.cu  swiglu_cu.cuh
inferer/source/tensor/: tensor.cpp
test/: CMakeLists.txt  test_buffer.cpp  test_main.cpp
test/test_op/: test_add.cpp  test_emb.cpp  test_rmsnorm.cpp
